Eski_Proje_Arsivi/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alt-las
  labels:
    name: alt-las
    app: alt-las
